fix GENMODEL parsing error for snlc_sim command line args

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -10172,7 +10172,7 @@ For the totally blind method,
 where the cosine argument is ten $\times$ redshift.
 The {\tt MUDIF} ($\mu$-offsets) are $O(1)$ and viewing these
 values provides no information about the true residuals; 
-hence ``totally blind."
+hence ``totally blind.''
 The disadvantage is that the cosmology fitting program, 
 which reads the BBC output, 
 must subtract $\cos(10z)$ from each blinded $\mu$.
@@ -10203,7 +10203,7 @@ an unknown cosmological model.
 However, if $A_{L,w}$ are not too large, the $\mu$-residuals 
 might still be somewhat close to zero. In this case, human inspection
 of the $\mu$-residuals provides some information; 
-hence we call this method ``blurry."
+hence we call this method ``blurry.''
 
 By default, {\tt SALT2mu.exe} will blind real data with the blurry
 method, and not apply blinding to simulated data.
