add ERRCALC to residual table

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1823,7 +1823,9 @@ A few of the output variables must be converted for the
    sigma_SIM   = ERRTEST * FLUXCAL_DATA_ERR
    PSF(arcSec) = PSF(sig,pixels) * 2.35 * PIXSIZE
 \end{verbatim}
-
+%
+BEWARE that full epoch information is available {\it only}
+with FITS format (not with TEXT format).
 
 % - - - - - - - - - - - - - - - - - - - - - - - 
 \clearpage
