fix gamma sign bugs in SALT2mu.c

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1691,6 +1691,9 @@ This format may be more useful for making plots and debugging.
 DEFINE_FIELDGROUP:  SHALLOW   E1+E2+S1+S2+C1+C2+X1+X2 
 DEFINE_FIELDGROUP:  DEEP      C3+X3
 
+REDCOR: g:0.3,r:0.5  # reduced corr = 0.3 & 0.5 for g & r, respectively
+REDCOR: iz:0.4       # reduced corr = 0.4 for i+z combined
+
 MAPNAME:  ERRSCALE_2D_ZPPSF
 BAND: griz    FIELD:  DEEP
 NVAR: 3
