add AVwarp and kcor to sim and fit output

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -1717,7 +1717,8 @@ ENDMAP:
 \end{Verbatim}
 \end{center}
 \caption{
-  Illustration of 2D map to define $\SSNR$ for DEEP fields in DES.
+  Illustration of {\tt FLUXERRMODEL\_FILE} with 2D map to 
+  define $\SSNR$ for DEEP fields in DES.
   While the bands and fields correspond to DES, this map is made up
   for illustration and  should not be used in any analysis.
  }
