--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -11545,7 +11545,7 @@ reads these mags.
 Errors and $S/N$ can be fudged in the simulation  as follows:
 %
 \begin{Verbatim}[frame=single]
-# 2. options to adjust exposure time (affects both SN flux and sky noise)
+# 1. options to adjust exposure time (affects both SN flux and sky noise)
   EXPOSURE_TIME: 20            # increase all exposure times by 20
   EXPOSURE_TIME_FILTER: g 20   # increase g exposure by 20
   FUDGESHIFT_ZPT:  -3.0        # reduce ZPT by 3 mags
@@ -11562,19 +11562,36 @@ Errors and $S/N$ can be fudged in the simulation  as follows:
   FUDGE_SNRMAX:  r=25      # adjust exposure time for r-band
 
 # 5. add magErr to all epochs
-  FUDGE_MAGERR: 0.03           # add .03 magErr to all epochs and bands
+  FUDGE_MAGERR: 0.03             # add .03 magErr to all epochs and bands
   FUDGE_MAGERR_FILTER: g   .01   # add .01 magErr to g-band 
   FUDGE_MAGERR_FILTER: riz .02   # add .02 magErr to riz bands
+
+# 6. add ZPTERR to all epochs
+  FUDGE_ZPTERR: 0.03             # add .03 ZPTERR to all epochs and bands
+  FUDGE_ZPTERR_FILTER: g   .01   # add .01 ZPTERR to g-band 
+  FUDGE_ZPTERR_FILTER: riz .02   # add .02 ZPTERR to riz bands
 \end{Verbatim}
 %
-There are five classes of error-fudging:
+There are six classes of error-fudging:
 (1) adjust exposure time to change both the SN flux and sky-noise,
 (2) increase the sky-noise while leaving the SN flux unchanged, 
 (3) force nearest-peak $S/N$ to be the same fixed value in all bands,
 (4) force nearest-peak $S/N$ for one band, then use computed,
-  {\tt EXPOSURE\_TIME} in all bands.
-(5) add arbitrary mag-error at each epoch.
+  {\tt EXPOSURE\_TIME} in all bands,
+(5) add arbitrary mag-error at each epoch,
+(6) add zero point error for each eppch.
 %
+The last two options ({\tt MAGERR} and {\tt ZPTERR}) are similar,
+but have a subtle difference. {\tt FUDGE\_MAGERR} is applied to 
+the model magnitudes regardless of the instrumental parameters.
+{\tt FUDGE\_ZPTERR} replaces the {\tt ZPTERR} column in the
+{\tt SIMLIB} file, which applies measurement scatter based on the
+{\tt SMEARFLAG\_ZEROPT} key. The 1-bit applies scatter to 
+the true fluxes, the 2-bit includes {\tt ZPTERR} in the reported
+flux-\uncs, and ``{\tt SMEARFLAG\_ZEROPT: 3}'' does both.
+
+
+\clearpage
 {\tt FUDGE2\_SNRMAX} is useful for setting a nearly fixed 
 error at all epochs, in contrast to a fixed $S/N$, or mag-error.
 For both options to fix the nearest-peak $S/N$ ratio, 
@@ -11610,8 +11627,6 @@ in the second iteration as follows:
 %
 where $\FSNMAX$ is the SN flux (photoelectrons)
 at the epoch with the maximum $S/N$.
-
-
 
 % xxxxx end of misc. sim tools
 
