--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3615,7 +3615,8 @@ the sim-input file (or via command-line override):
    HOSTLIB_GALID_PRIORITY: xxx yyy    # default= 0 0 
    HOSTLIB_GENZPHOT_FUDGEPAR: a0 a1 a2 bprob b1 # default = all -9
    HOSTLIB_GENZPHOT_BIAS:     b0 b1 b2 b3  # 3rd order poly(ztrue)
-   HOSTLIB_SERSIC_SCALE:  xxx         # default= 1.0
+   HOSTLIB_SCALE_SERSIC_SIZE:  xxx         # default= 1.0
+   HOSTLIB_SCALE_LOGMASS_ERR:  xxx         # default= 1.0
 # debug options
    HOSTLIB_GALID_FORCE:    ####       # forced GALID 
    HOSTLIB_FIXRAN_RADIUS:  #.##       # fix radial random number (0-1)
@@ -3743,9 +3744,10 @@ The parmaeters {\tt b0,b1,b2,b3} describe a 3rd order polynomial function
 of true redshift. This bias applies to {\tt HOSTLIB\_GENZPHOT\_FUDGEPAR} 
 or to the {\tt ZPHOT[ERR]} columns in the {\tt HOSTLIB}.
 
-{\tt HOSTLIB\_SERSIC\_SCALE} scales the a0 and b0 half-light radii
+{\tt HOSTLIB\_SCALE\_SERSIC\_SIZE} scales the a0 and b0 half-light radii
 to make the galaxy sizes bigger or smaller.
 
+{\tt HOSTLIB\_SCALE\_LOGMASS\_ERR} scales the {\tt LOGMASS} \unc.
 
 \clearpage
 The {\tt HOSTLIB\_MSKOPT} options can be 
@@ -3979,7 +3981,7 @@ the weight map.
 There are two sets of HOST-related parameters in the output.
 The first set, {\tt HOSTGAL\_XXX}, corresponds to observables
 which can appear in real data files. These obervables include
-{\tt OBJID}, {\tt ZPHOT}, {\tt ZPHOT\_ERR} and {\tt LOGMASS}.
+{\tt OBJID}, {\tt ZPHOT}, {\tt ZPHOT\_ERR}, {\tt LOGMASS\_TRUE}.
 Additional obervables may be added later.  The second set,
 {\tt SIM\_HOSTLIB\_XXX}, corresponds to the user-selected
 parameters from the sim-input key {\tt HOSTLIB\_STOREPAR}.
