add GALMAG dependence to PHOTPROB map

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -4349,12 +4349,12 @@ to {\tt NON1ASED} and {\tt NON1AGRID} models.
 For the {\tt LCLIB} model, the rate is defined as a function
 of Galactic coordinates ($l$ and $b$). Current option is
 \begin{verbatim}
-   DNDB:  COSBPOLY:  <b0>  <b1>  <b2>  <b3> <b4> <b5>
+   DNDB:  COSBPOLY  <b0>  <b1>  <b2>  <b3> <b4> <b5>
       or
-   DNDB:  BPOLY:     <b0>  <b1>  <b2>  <b3> <b4> <b5>
+   DNDB:  BPOLY      <b0>  <b1>  <b2>  <b3> <b4> <b5>
 
 # ------- example -------
-   DNDB:  COSBPOLY:   1     0     0     0   0    0  # isotropic
+   DNDB:  COSBPOLY    1     0     0     0   0    0  # isotropic
 \end{verbatim}
 %
 which defines the $b$-dependence with a 
