HOSTLIB_MSKOPT += 128 -> ZTRUE = ZPHOT

--- a/doc/snana_manual.tex
+++ b/doc/snana_manual.tex
@@ -3844,6 +3844,9 @@ viewed with the grep-command
   All available SN parameters are used; 
   simulation aborts if no SN parameters are found.
 %
+\item {\tt MSKOPT} += 128~: set {\tt ZTRUE = ZPHOT} 
+     (e.g., study impact of {\tt HOSTLIB} based on photo-z).
+%
 \item {\tt MSKOPT} += 256~: increase verbosity to screen.
 %
 \item {\tt MSKOPT} += 1024~: detailed screen dump
